# template_py_package

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: black.yaml
notebooks/: experiment.ipynb
src/: utils.py
src/example_package/: example.py  example_class.py
tests/: test_utils.py
tests/test_example_packages/: conftest.py  test_example.py  test_example_class.py  test_exmaple.py
