[project]
name = "template-py-package"
version = "0.1.0"
description = "A small example package"
authors = ["ksk0629 <neko.to.tomodachi.muse@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "example_package", from = "src" }]
repository = "https://github.com/ksk0629/template_py_package"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">= 3.13"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "jupyter>=1.1.1",
    "mypy>=1.18.2",
    "notebook>=7.4.7",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true

[tool.pytest.ini_options]
markers = [
    "add_number: marks tests for add_number function",
    "example_class: marks tests for ExmapleClass Class"
]
pythonpath = "./src"
testpaths = ["tests",]

[tool.coverage.report]
skip_empty = true
skip_covered = true  # Only show files that are not 100% covered.
exclude_lines = [
    "@(abc\\.)?abstractmethod", # Skip @abstractmethod
]
