[build-system]
requires = ["setuptools >= 64", "setuptools_scm >= 8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template-py-package"
dynamic = ["version"]
description = "A small example package"
requires-python = ">=3.13"
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/ksk0629/template_py_package"

[tool.setuptools]
packages = ["src"]

[tool.setuptools_scm]
version_file = "src/_version.py"
local_scheme = "no-local-version"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "jupyter>=1.1.1",
    "mypy>=1.18.2",
    "notebook>=7.4.7",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true

[tool.pytest.ini_options]
markers = [
    "add_number: marks tests for add_number function",
    "example_class: marks tests for ExmapleClass Class"
]
pythonpath = "./src"
testpaths = ["tests",]

[tool.coverage.report]
skip_empty = true
skip_covered = true  # Only show files that are not 100% covered.
exclude_lines = [
    "@(abc\\.)?abstractmethod", # Skip @abstractmethod
]
